--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         android:theme="@style/AppTheme.Launcher">
 
         <activity
-            android:name=".login.LoginActivity"
-            android:label="@string/title_activity_login">
+            android:name=".login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -35,10 +34,10 @@
             android:name=".activities.MapActivity"
             android:label="@string/title_activity_map"></activity>
         <activity android:name=".activities.GeofortActivity"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme">
+        </activity>
         <activity android:name=".activities.GeofortListActivity"
-            >
-
+            android:theme="@style/AppTheme.Launcher">
 
         </activity>
     </application>
