--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,13 @@
         </activity>
 
         <activity
-            android:name=".login.RegisterActivity"
-            android:label="@string/title_activity_register">
+        android:name=".login.RegisterActivity"
+        android:label="@string/title_activity_register">
+    </activity>
+
+        <activity
+            android:name=".settings.ChangeEmail"
+            android:label="@string/title_activity_change_email">
         </activity>
 
         <activity
