--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,18 @@
         </activity>
 
         <activity
-            android:name=".login.RegisterActivity"
-            android:label="@string/title_activity_register">
+        android:name=".login.RegisterActivity"
+        android:label="@string/title_activity_register">
+    </activity>
+
+        <activity
+            android:name=".settings.ChangeEmail"
+            android:label="@string/title_activity_change_email">
+        </activity>
+
+        <activity
+            android:name=".settings.UserSettingsActivity"
+            android:label="@string/title_activity_user_settings">
         </activity>
 
         <meta-data
@@ -33,6 +43,7 @@
         <activity
             android:name=".activities.MapActivity"
             android:label="@string/title_activity_map"></activity>
+
         <activity android:name=".activities.GeofortActivity"
             android:theme="@style/AppTheme">
         </activity>
